// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp renders with no values set 1`] = `
<form
  class="sc-gsTCUz"
>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="firstname"
    >
      Firstname
    </label>
    <input
      aria-invalid="true"
      class="sc-jSgupP"
      id="firstname"
      minlength="2"
      required=""
      type="text"
      value=""
    />
  </div>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="lastname"
    >
      Lastname
    </label>
    <input
      aria-invalid="true"
      class="sc-jSgupP"
      id="lastname"
      minlength="2"
      required=""
      type="text"
      value=""
    />
  </div>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="nickname"
    >
      Nickname
    </label>
    <input
      aria-invalid="true"
      class="sc-jSgupP"
      id="nickname"
      type="text"
      value=""
    />
  </div>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="email"
    >
      Email
    </label>
    <input
      aria-invalid="true"
      class="sc-jSgupP"
      id="email"
      pattern="\\\\S+@\\\\S+\\\\.\\\\S+"
      required=""
      type="email"
      value=""
    />
  </div>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="password"
    >
      Password
    </label>
    <input
      aria-invalid="true"
      class="sc-jSgupP"
      id="password"
      minlength="6"
      pattern="^(?=.*[a-z])(?=(?:.*[0-9]){2}).*"
      required=""
      type="password"
      value=""
    />
  </div>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="repeatPassword"
    >
      Repeat password
    </label>
    <input
      aria-invalid="true"
      class="sc-jSgupP"
      id="repeatPassword"
      minlength="6"
      pattern="^(?=.*[a-z])(?=(?:.*[0-9]){2}).*"
      required=""
      type="password"
      value=""
    />
  </div>
  <div
    class="sc-iBPRYJ"
  >
    <input
      checked=""
      class="sc-fubCfw"
      id="checkboxField"
      type="checkbox"
    />
    <label
      class="sc-eCssSg"
      for="checkboxField"
    >
      Show address
    </label>
  </div>
  <fieldset
    class="sc-bdfBwQ gjynrh"
  >
    <div
      class="sc-dlfnbm"
    >
      <label
        class="sc-eCssSg"
        for="street"
      >
        Street
      </label>
      <input
        aria-invalid="true"
        class="sc-jSgupP"
        id="street"
        minlength="4"
        required=""
        type="text"
        value=""
      />
    </div>
    <div
      class="sc-dlfnbm"
    >
      <label
        class="sc-eCssSg"
        for="apartment"
      >
        Apartment
      </label>
      <input
        aria-invalid="true"
        class="sc-jSgupP"
        id="apartment"
        required=""
        type="text"
        value=""
      />
    </div>
    <div
      class="sc-dlfnbm"
    >
      <label
        class="sc-eCssSg"
        for="zip"
      >
        ZIP
      </label>
      <input
        aria-invalid="true"
        class="sc-jSgupP"
        id="zip"
        maxlength="5"
        minlength="5"
        pattern="\\\\d{5}"
        required=""
        type="text"
        value=""
      />
    </div>
    <div
      class="sc-dlfnbm"
    >
      <label
        class="sc-eCssSg"
        for="city"
      >
        City
      </label>
      <input
        aria-invalid="true"
        class="sc-jSgupP"
        id="city"
        minlength="4"
        required=""
        type="text"
        value=""
      />
    </div>
  </fieldset>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="additionalInformation"
    >
      Additional information
    </label>
    <textarea
      aria-invalid="true"
      class="sc-pFZIQ"
      id="additionalInformation"
    />
  </div>
  <button
    class="sc-gKsewC gwmOxg"
    type="submit"
  >
    Sign up now!
  </button>
</form>
`;

exports[`SignUp renders with values for firstname lastname and email 1`] = `
<form
  class="sc-gsTCUz"
>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="firstname"
    >
      Firstname
    </label>
    <input
      aria-invalid="false"
      class="sc-jSgupP"
      id="firstname"
      minlength="2"
      required=""
      type="text"
      value="John"
    />
  </div>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="lastname"
    >
      Lastname
    </label>
    <input
      aria-invalid="false"
      class="sc-jSgupP"
      id="lastname"
      minlength="2"
      required=""
      type="text"
      value="Doe"
    />
  </div>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="nickname"
    >
      Nickname
    </label>
    <input
      aria-invalid="true"
      class="sc-jSgupP"
      id="nickname"
      type="text"
      value=""
    />
  </div>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="email"
    >
      Email
    </label>
    <input
      aria-invalid="true"
      class="sc-jSgupP"
      id="email"
      pattern="\\\\S+@\\\\S+\\\\.\\\\S+"
      required=""
      type="email"
      value="test@example"
    />
  </div>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="password"
    >
      Password
    </label>
    <input
      aria-invalid="true"
      class="sc-jSgupP"
      id="password"
      minlength="6"
      pattern="^(?=.*[a-z])(?=(?:.*[0-9]){2}).*"
      required=""
      type="password"
      value=""
    />
  </div>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="repeatPassword"
    >
      Repeat password
    </label>
    <input
      aria-invalid="true"
      class="sc-jSgupP"
      id="repeatPassword"
      minlength="6"
      pattern="^(?=.*[a-z])(?=(?:.*[0-9]){2}).*"
      required=""
      type="password"
      value=""
    />
  </div>
  <div
    class="sc-iBPRYJ"
  >
    <input
      checked=""
      class="sc-fubCfw"
      id="checkboxField"
      type="checkbox"
    />
    <label
      class="sc-eCssSg"
      for="checkboxField"
    >
      Show address
    </label>
  </div>
  <fieldset
    class="sc-bdfBwQ gjynrh"
  >
    <div
      class="sc-dlfnbm"
    >
      <label
        class="sc-eCssSg"
        for="street"
      >
        Street
      </label>
      <input
        aria-invalid="true"
        class="sc-jSgupP"
        id="street"
        minlength="4"
        required=""
        type="text"
        value=""
      />
    </div>
    <div
      class="sc-dlfnbm"
    >
      <label
        class="sc-eCssSg"
        for="apartment"
      >
        Apartment
      </label>
      <input
        aria-invalid="true"
        class="sc-jSgupP"
        id="apartment"
        required=""
        type="text"
        value=""
      />
    </div>
    <div
      class="sc-dlfnbm"
    >
      <label
        class="sc-eCssSg"
        for="zip"
      >
        ZIP
      </label>
      <input
        aria-invalid="true"
        class="sc-jSgupP"
        id="zip"
        maxlength="5"
        minlength="5"
        pattern="\\\\d{5}"
        required=""
        type="text"
        value=""
      />
    </div>
    <div
      class="sc-dlfnbm"
    >
      <label
        class="sc-eCssSg"
        for="city"
      >
        City
      </label>
      <input
        aria-invalid="true"
        class="sc-jSgupP"
        id="city"
        minlength="4"
        required=""
        type="text"
        value=""
      />
    </div>
  </fieldset>
  <div
    class="sc-dlfnbm"
  >
    <label
      class="sc-eCssSg"
      for="additionalInformation"
    >
      Additional information
    </label>
    <textarea
      aria-invalid="true"
      class="sc-pFZIQ"
      id="additionalInformation"
    />
  </div>
  <button
    class="sc-gKsewC jkrbqk"
    disabled=""
    type="submit"
  >
    Sign up now!
  </button>
</form>
`;
